[tool.poetry]
name = "tom-lt"
# this version is a placeholder: version supplied by poetry-dynamic-versioning
version = "0.0.0"
description = "TOM Toolkit Facility module for the Liverpool Telescope"
authors = [
    "Doug Arnold <d.m.arnold@ljmu.ac.uk>",
    "David Collom <dmcollom@gmail.com>",
    "Lindy Lindstrom <llindstrom@lco.global>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "tom_lt"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tomtoolkit = ">=2.15,<3.0"
suds-py3 = "^1.4.5"
lxml = ">=5.2,<6.0"

[tool.poetry.group.lint.dependencies]
flake8 = ">=7.0,<8.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
# the default pattern regex makes the 'v' mandatory
# this pattern modifies the default regex in order to make the 'v' optional
# ('v' becomes '[v]?' meaning a single v, [v], and ? means optional)
pattern = "(?x)^[v]?((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

# substitute version not only in pyproject.toml (which the config block above does)
# but also the __version__.py file
[tool.poetry-dynamic-versioning.substitution]
files = ["tom_lt/__init__.py"]

[build-system]
requires = ["poetry-core>=1.8.0", "poetry-dynamic-versioning>=1.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
# poetry_dynamic_versioning.backend is a thin wrapper around the standard build-backend = "poetry.core.masonry.api"
