[project]
name = "tom-lt"
description = "TOM Toolkit Facility module for the Liverpool Telescope"
authors = [
    {name = "Doug Arnold", email = "d.m.arnold@ljmu.ac.uk"},
    {name = "David Collom", email = "dmcollom@gmail.com>"},
    {name = "Lindy Lindstrom", email = "llindstrom@lco.global"}
]
maintainers = [
    {name = "Joey Chatelain", email = "jchate6@gmail.com"},
    {name = "William Lindstrom", email = "llindstrom@lco.global"},
    {name = "Rachel Street", email = "rstreet@lco.global"},
    {name = "Doug Arnold", email = "<d.m.arnold@ljmu.ac.uk>"},
]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://lco.global/tomtoolkit/"
repository = "https://github.com/TOMToolkit/tom_base"
documentation = "https://tom-toolkit.readthedocs.io/en/latest/"

keywords = [
    'tomtoolkit',
    'TOM',
    'astronomy',
    'astrophysics',
    'cosmology',
    'science',
    'fits',
    'observatory',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics'
]

dynamic = ["version"]
requires-python = ">=3.10.0,<3.14"
dependencies = [
    "tomtoolkit>=3.0.0,<4.0.0",
    "suds-py3~=1.4",
    "lxml>=5.2,<5.4"
]

# this version is a placeholder: version supplied by poetry-dynamic-versioning
[tool.poetry]
version = "0.0.0"

[tool.poetry.group.test.dependencies]
factory_boy = ">3.2.1,<3.4"

[tool.poetry.group.coverage.dependencies]
coverage = ">=6,<8" # coveralls needs ~6 even though 7.3.2 is latest
coveralls = ">=3,<5"

[tool.poetry.group.lint.dependencies]
flake8 = ">=7.3.0,<7.4"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
# the default pattern regex makes the 'v' manditory
# this pattern modifies the default regex in order to make the 'v' optional
# ('v' becomes '[v]?' meaning a single v, [v], and ? means optional)
pattern = "(?x)^[v]?((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

# substitute version not only in pyproject.toml (which the config block above does)
# but also the __version__.py file
[tool.poetry-dynamic-versioning.substitution]

[build-system]
requires = ["poetry-core>=2.0.0, <3.0.0", "poetry-dynamic-versioning >=0.22.0"]
build-backend = "poetry_dynamic_versioning.backend"
